src/test/ui/rfc-2091-track-caller/only-for-fns.stderr
error[E0739]: attribute should be applied to function
  --> $DIR/only-for-fns.rs:3:1
   |
LL | #[track_caller]
   | ^^^^^^^^^^^^^^^
LL | struct S;
   | --------- not a function

error: aborting due to previous error

