src/test/ui/rfc-2091-track-caller/only-for-fns.rs
#![feature(track_caller)] //~ WARN the feature `track_caller` is incomplete

#[track_caller]
struct S;
//~^^ ERROR attribute should be applied to function

fn main() {}
